# FoxJson

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  xmake.lua
cmake/: Findgenericlexer.cmake
example/: CMakeLists.txt  main.cpp
include/: Parser.hpp  ParserHelper.h  json.hpp
include/Exceptions/: AException.hpp  ParserError.hpp
src/: AException.cpp  ParseError.cpp  Parser.cpp  ParserHelper.cpp  json.cpp
submodules/: xmake.lua
